force-app/main/default/objects/ST_Yojitsu_Snapshot__c/ST_Yojitsu_Snapshot__c.object-meta.xml
<CustomObject>
    <label>ST予実管理_スナップショット</label>
    <nameField>
        <displayFormat>STY-{0000000000}</displayFormat>
        <label>ST予実管理_スナップショットNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>