force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ST予実管理_スナップショット</relationshipLabel>
    <relationshipName>STSnopshotAccount</relationshipName>
    <type>Lookup</type>
</CustomField>