force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/AccountID18__c.field-meta.xml
<CustomField>
    <fullName>AccountID18__c</fullName>
    <label>取引先ID(18桁)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>