force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/DepartmentInput__c.field-meta.xml
<CustomField>
    <fullName>DepartmentInput__c</fullName>
    <label>部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>