force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/OpportunityCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCreatedDate__c</fullName>
    <formula>Opportunity__r.CreatedDate</formula>
    <label>商談作成日</label>
    <type>Date</type>
</CustomField>