force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/ST_focustype_kouji_im__c.field-meta.xml
<CustomField>
    <fullName>ST_focustype_kouji_im__c</fullName>
    <formula>Opportunity__r.Account.ST_focustype_kouji_im__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>重点フラグ_工事_重要対象（削除予定)</label>
    <type>Checkbox</type>
</CustomField>