force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/ST_focustype_kouji_imInput__c.field-meta.xml
<CustomField>
    <fullName>ST_focustype_kouji_imInput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重点フラグ_工事_重要対象</label>
    <type>Checkbox</type>
</CustomField>