force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/ST_yosankumikomi__c.field-meta.xml
<CustomField>
    <fullName>ST_yosankumikomi__c</fullName>
    <formula>TEXT(Opportunity__r.ST_yosankumikomi__c)</formula>
    <label>予算組み込み（削除予定)</label>
    <type>Text</type>
</CustomField>