force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/ST_yosankumikomiInput__c.field-meta.xml
<CustomField>
    <fullName>ST_yosankumikomiInput__c</fullName>
    <label>予算組み込み</label>
    <length>255</length>
    <type>Text</type>
</CustomField>