force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <formula>Text(Opportunity__r.StageName)</formula>
    <label>フェーズ（削除予定)</label>
    <type>Text</type>
</CustomField>