force-app/main/default/objects/ST_Yojitsu_Snapshot__c/fields/StageNameInput__c.field-meta.xml
<CustomField>
    <fullName>StageNameInput__c</fullName>
    <label>フェーズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>